--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -54,3 +54,19 @@ ul li {
     color: #ffcc00;
     font-weight: bold;
 }
+
+.email {
+    font-size: 12px;                    
+    display: inline-block;       
+    max-width: 200px;            
+}
+
+.social a {
+    color: #00c8ff;
+    text-decoration: none;
+    margin-right: 10px;
+}
+
+.social a:hover {
+    text-decoration: underline;
+}
